corrected table-alignment in  block page

--- a/apps/block_scout_web/assets/css/_layout.scss
+++ b/apps/block_scout_web/assets/css/_layout.scss
@@ -122,3 +122,6 @@ dl:last-child {
   width: 70px;
   display: inline-block!important;
 }
+.width100 {
+  width: 100px;
+}
